--- a/works/Cecilia.html
+++ b/works/Cecilia.html
@@ -9,7 +9,7 @@
 <body>
     <div class="topnav">
   <a href="../index.html">Home</a>
-  <as href="../search.html">Search</a>
+  <a href="../search.html">Search</a>
   <a  href="../about.html">About</a>
   <a href="../works/Book2.html">Placeholder</a>
 </div>
