--- a/search.html
+++ b/search.html
@@ -34,8 +34,8 @@
             <input class="themes", type="checkbox", id="audiovisual", name="audiovisual", checked="True"><br>
         </div>
         <div class="column3">
-            <label for="rec">Artist's recommendation:</label>
-            <input class="themes", type="checkbox", id="rec", name="rec", checked="True"><br>
+            <label for="recommendation">Artist's recommendation:</label>
+            <input class="themes", type="checkbox", id="rec", name="recommendation", checked="True"><br>
             <label for="CCA">CCA:</label>
             <input class="themes", type="checkbox", id="CCA", name="CCA", checked="True"><br>
             <label for="cozy">cozy:</label>
@@ -44,33 +44,33 @@
             <input class="themes", type="checkbox", id="CCA", name="CCA", checked="True"><br>
         </div>
         <div class="column3">
-            <label for="HAT">Horror/action/thriller:</label>
-            <input class="themes", type="checkbox", id="HAT", name="HAT", checked="True"><br>
+            <label for="horror/action/thriller">Horror/action/thriller:</label>
+            <input class="themes", type="checkbox", id="horror/action/thriller", name="horror/action/thriller", checked="True"><br>
             <label for="mystery">Mystery:</label>
             <input class="themes", type="checkbox", id="mystery", name="mystery", checked="True"><br>
-            <label for="exp">narrative experiments:</label>
-            <input class="themes", type="checkbox", id="exp", name="exp", checked="True"><br>
+            <label for="narrative experiments">narrative experiments:</label>
+            <input class="themes", type="checkbox", id="narrative experiments", name="narrative experiments", checked="True"><br>
             <label for="comedy">Comedy:</label>
             <input class="themes", type="checkbox", id="comedy", name="comedy", checked="True"><br>
             
         </div>
         <div class="column3">
-            <label for="scifa">Scifi/fantasy:</label>
-            <input class="themes", type="checkbox", id="scifa", name="scifa", checked="True"><br>
-            <label for="psy">Psychological:</label>
-            <input class="themes", type="checkbox", id="psy", name="psy", checked="True"><br>
+            <label for="scifi/fantasy">Scifi/fantasy:</label>
+            <input class="themes", type="checkbox", id="Scifi/fantasy", name="scifi/fantasy", checked="True"><br>
+            <label for="psychological">Psychological:</label>
+            <input class="themes", type="checkbox", id="psychological", name="psychological", checked="True"><br>
             <label for="gender">Gender:</label>
             <input class="themes", type="checkbox", id="gender", name="gender", checked="True"><br>
-            <label for="pol">Politics:</label>
-            <input class="themes", type="checkbox", id="pol", name="pol", checked="True"><br>
+            <label for="politics">Politics:</label>
+            <input class="themes", type="checkbox", id="politics", name="politics", checked="True"><br>
         </div>
         <div class="column3">
             <label for="trauma">Trauma:</label>
             <input class="themes", type="checkbox", id="trauma", name="trauma", checked="True"><br>
-            <label for="cur">Current events:</label>
-            <input class="themes", type="checkbox", id="cur", name="cur", checked="True"><br>
-            <label for="child">Childhood:</label>
-            <input class="themes", type="checkbox", id="child", name="child", checked="True"><br>
+            <label for="current events">Current events:</label>
+            <input class="themes", type="checkbox", id="current events", name="current events", checked="True"><br>
+            <label for="childhood">Childhood:</label>
+            <input class="themes", type="checkbox", id="childhood", name="childhood", checked="True"><br>
         </div>
         </form>
     </div>
@@ -80,7 +80,7 @@
     </div>
     <div id="books", class="box">
         <table id="table">
-<tr><th>Title</th><th>Length</th><th>Themes</th></tr>
+<tr><th>Title</th><th>Artist(s)</th><th>Length</th><th>Themes</th></tr>
         </table>
     </div>
 </body>
