--- a/search.html
+++ b/search.html
@@ -12,7 +12,7 @@
   <a href="index.html">Home</a>
   <a class="active" href="search.html">Search</a>
   <a  href="about.html">About</a>
-  <a href="works/Book2.html">Placeholder</a>
+  <a href="Artist pages/artists.html">Artists</a>
 </div>
     <script src="data.js"></script>
     <script src="script.js"></script>
