--- a/works/Book2.html
+++ b/works/Book2.html
@@ -11,7 +11,7 @@
   <a href="../index.html">Home</a>
   <a href="../search.html">Search</a>
   <a  href="../about.html">About</a>
-  <a href="../works/Book2.html">Placeholder</a>
+  <a href="../Artist pages/artists.html">Artists</a>
 </div>
     <h1>book</h1>
     <div class="box">
