--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   <a href="index.html">Home</a>
   <a href="search.html">Search</a>
   <a class="active" href="about.html">About</a>
-  <a href="works/Book2.html">Placeholder</a>
+  <a href="Artist pages/artists.html">Artists</a>
 </div>
     <div class="box">
         <h1>About</h1>
