--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="topnav">
-  <a class="active" href="index.html">Home</a>
-  <a href="search.html">Search</a>
-  <a href="about.html">About</a>
-  <a href="works/Book2.html">Placeholder</a>
+
+<div class="containervert", style=" height: 1000px; overflow: visible;">
+<div class="box", style="margin-left: auto; text-align: center; width: 50%; transform: rotate(-3deg); overflow: visible;">
+    <h1>Home</h1>
 </div>
-    <div class="box">
-        <h1>Home</h1>
-        <p>This exists.</p>
-        <h3>Topic one</h3>
-        <p>And there's some stuff</p>
+    <div class="box", style="z-index: 1; margin-left: auto; transform: rotate(2deg); max-width: 931.calc(94.1465vw*0.75); max-height:calc(75vw*0.75); min-width: calc(94.1465vw*0.75); min-height: calc(75vw*0.75); background-image: url('img/homebg.jpg'); background-repeat: no-repeat; background-position: center; position: relative; background-size: 100%; overflow: visible; text-align: center;">
+        <h2 class="outlined">Welcome!</h2>
+        <h3 class="outlined"> Enjoy your stay!</h3>
+        <p class="outlined", style="font-size: 22px; width: 30vw; color: #f2edeb; margin:auto;">Check out the about page to know more or go straight to the art with search.</p>
+        <button onclick="window.location.href = 'about.html'"><a href="about.html", style="font-family: hand; text-transform: uppercase; font-size: 24px;">About</a></button><br>
+        <button onclick="window.location.href = 'search.html'"><a href="search.html", style="font-family: hand; text-transform: uppercase; font-size: 24px;">Search</a></button><br>
+        <button onclick="window.location.href = 'Artist pages/artists.html'"><a href="Artist pages/artists.html", style="font-family: hand; text-transform: uppercase; font-size: 24px;">Artists</a></button>
     </div>
+    
+</div>
 </body>
 </html>
