random art and artists page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="data.js"></script>
+    <script src="random_page.js"></script>
 </head>
 <body>
 
@@ -18,7 +20,8 @@
         <p class="outlined", style="font-size: 22px; width: 30vw; color: #f2edeb; margin:auto;">Check out the about page to know more or go straight to the art with search.</p>
         <button onclick="window.location.href = 'about.html'"><a href="about.html", style="font-family: hand; text-transform: uppercase; font-size: 24px;">About</a></button><br>
         <button onclick="window.location.href = 'search.html'"><a href="search.html", style="font-family: hand; text-transform: uppercase; font-size: 24px;">Search</a></button><br>
-        <button onclick="window.location.href = 'Artist pages/artists.html'"><a href="Artist pages/artists.html", style="font-family: hand; text-transform: uppercase; font-size: 24px;">Artists</a></button>
+        <button onclick="window.location.href = 'Artist pages/artists.html'"><a href="Artist pages/artists.html", style="font-family: hand; text-transform: uppercase; font-size: 24px;">Artists</a></button><br>
+        <button onclick="rand_jump()"><u><a style="font-family: hand; text-transform: uppercase; font-size: 24px;">Random artwork</a></u></button>
     </div>
     
 </div>
