--- a/Artist pages/artists.html
+++ b/Artist pages/artists.html
@@ -14,14 +14,16 @@
   <a class="active" href="artists.html">Artists</a>
 </div>
 <div class="box">
-    <h2>Dr Seuss</h2>
-    <p>I actually have no clue what he wrote</p>
-    <button onclick="alert('this is a placeholder link')">Read more </button><button onclick="alert('This would lead you to the artists chosen work.')">Artist's recommendation</button>
+    <h2>Victoria Lecoutere</h2>
+    <p>Wrote Cecilia.</p>
+    <button onclick="window.location.href='VicLec.html'"><a href="VicLec.html"> Read more </a></button>
+    <button onclick="alert('This would lead you to the artists chosen work.')">Artist's recommendation</button>
 </div>
 <div class="box">
     <h2>Dr Seuss two</h2>
     <p>This is Dr. Seuss's evil twin.</p>
-    <button onclick="alert('this is a placeholder link')">Read more </button><button onclick="alert('This would lead you to the artists chosen work.')">Artist's recommendation</button>
+    <button onclick="alert('this is a placeholder link')">Read more </button>
+    <button onclick="alert('This would lead you to the artists chosen work.')">Artist's recommendation</button>
 </div>
 </body>
 </html>
