--- a/search.html
+++ b/search.html
@@ -40,8 +40,8 @@
             <input class="themes", type="checkbox", id="CCA", name="CCA", checked="True"><br>
             <label for="cozy">cozy:</label>
             <input class="themes", type="checkbox", id="cozy", name="cozy", checked="True"><br>
-            <label for="CCA">CCA:</label>
-            <input class="themes", type="checkbox", id="CCA", name="CCA", checked="True"><br>
+            <label for="anthology">Anthology:</label>
+            <input class="themes", type="checkbox", id="anthology", name="anthology", checked="True"><br>
         </div>
         <div class="column3">
             <label for="horror/action/thriller">Horror/action/thriller:</label>
