--- a/Artist pages/VicLec.html
+++ b/Artist pages/VicLec.html
@@ -27,7 +27,7 @@
 <div class="box">
     <h3>List of works</h3>
     <a href="../works/Cecilia.html">Cecilia</a><br>
-    <a href="../works/Cecilia.html">placeholder</a><br>
+    <a href="../works/fromnymphtobrokenwings.html">From Nymph to Broken Wings</a><br>
 </div>
 </body>
 </html>
