--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rainy Sunday Nights home</title>
     <link rel="stylesheet" href="style.css" />
     <script src="data.js"></script>
     <script src="random_page.js"></script>
@@ -12,7 +12,7 @@
 
 <div class="containervert", style=" height: 1000px; overflow: visible;">
 <div class="box", style="margin-left: auto; text-align: center; width: 50%; transform: rotate(-3deg); overflow: visible;">
-    <h1>Home</h1>
+    <h1>Rainy Sunday Nights Library</h1>
 </div>
     <div class="box", style="z-index: 1; margin-left: auto; transform: rotate(2deg); max-width: 931.calc(94.1465vw*0.75); max-height:calc(75vw*0.75); min-width: calc(94.1465vw*0.75); min-height: calc(75vw*0.75); background-image: url('img/homebg.jpg'); background-repeat: no-repeat; background-position: center; position: relative; background-size: 100%; overflow: visible; text-align: center;">
         <h2 class="outlined">Welcome!</h2>
